MultiSample broke GPencil Surface sticking mode #34713

Closed
opened 2013-03-20 23:46:08 +01:00 by Andrey M · 5 comments

%%%--- Operating System, Graphics card ---
Linux Mint 14 x64, Windows 7 x64; GTX570

- Blender version with error, and version that worked ---

with error: r55316 - r55451
worked: r55315 and earlier

- Short description of error ---

GPensil doesn't respect Surfaces and won't stick to them right when:

  1. MultiSample in viewport is enabled
  2. You has selected some elements in editmode (like select some vertex or edges)
  3. You rotate viewport (camera of viewport?) after selection mesh elements

Video about it: http://youtu.be/I73tcm-sMzo

- Steps for others to reproduce the error (preferably based on attached .blend file) ---
  1. Make sure you have multisample enabled (i had x4)
  2. open default scene with default cube
  3. Make new GPencil layer and set his draw mode to 'Surface'
  4. Go to default cube editmode and select some vertexes by mouseclicking
    4.1/2 (Optional) leave editmode
  5. !!! Rotate viewport (change foreshortening, сhoose a different viewport-camera angle ) !!!
  6. Draw some GPencils balls of yarn over the cube (with pushed 'd' key by default)
  7. See? It doesn't align to surface (
    %%%
%%%--- Operating System, Graphics card --- Linux Mint 14 x64, Windows 7 x64; GTX570 - Blender version with error, and version that worked --- with error: r55316 - r55451 worked: r55315 and earlier - Short description of error --- GPensil doesn't respect Surfaces and won't stick to them right when: 1. MultiSample in viewport is enabled 2. You has selected some elements in editmode (like select some vertex or edges) 3. You rotate viewport (camera of viewport?) after selection mesh elements Video about it: http://youtu.be/I73tcm-sMzo - Steps for others to reproduce the error (preferably based on attached .blend file) --- 1. Make sure you have multisample enabled (i had x4) 2. open default scene with default cube 3. Make new GPencil layer and set his draw mode to 'Surface' 4. Go to default cube editmode and select some vertexes by mouseclicking 4.1/2 (Optional) leave editmode 5. !!! Rotate viewport (change foreshortening, сhoose a different viewport-camera angle ) !!! 6. Draw some GPencils balls of yarn over the cube (with pushed 'd' key by default) 7. See? It doesn't align to surface ( %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

%%%It look like some problems with depth's getting, but i'm not programmer and don't know%%%

%%%It look like some problems with depth's getting, but i'm not programmer and don't know%%%
Member

%%%Confirmed. But this code is confusing here... it uses the ED_view3d_autodist() feature (for viewport manipulation).

This whole depths updating pipeline seems to be unique (even though similar for sculpt or particle drawing), and ignores gpu offscreen entirely.
I've added a fix for grease pencil now, also seems to work for "3d view autodepth" feature now. But the full implication of this code is better for Campbell to give a final review for.%%%

%%%Confirmed. But this code is confusing here... it uses the ED_view3d_autodist() feature (for viewport manipulation). This whole depths updating pipeline seems to be unique (even though similar for sculpt or particle drawing), and ignores gpu offscreen entirely. I've added a fix for grease pencil now, also seems to work for "3d view autodepth" feature now. But the full implication of this code is better for Campbell to give a final review for.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Author

%%%Thanks! it's working :)%%%

%%%Thanks! it's working :)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#34713
No description provided.